test/tests/errors/error-file-eof-wrong-arg-count.sm
// true
// false
// false
/**/
/**/

program{
    file f withbuffer bf: int;
    output eof(f, bf);
}